--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
             <ul class="nav-list">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#">Loja</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#contact">Contato</a></li>
@@ -154,7 +154,7 @@
 				<div class="blog-card">
 					<div class="card">
 						<div class="card-header">
-							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="imagens/Captura de tela 2024-08-09 082140.png"></a>
+							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="img/Fofos.jpg"></a>
 						</div>
 						<div class="card-body">
 							<span Class="tag tag-orange">tiktok</span>
@@ -167,7 +167,7 @@
 					</div>
 					<div class="card">
 						<div class="card-header">
-							<a href="https://www.instagram.com/gugu.talk.show/"><img src="imagens/Captura de tela 2024-08-09 080743.png"></a>
+							<a href="https://www.instagram.com/gugu.talk.show/"><img src="img/vista.png"></a>
 						</div>
 						<div class="card-body">
 							<span Class="tag tag-purple">Instagram</span>
@@ -180,7 +180,7 @@
 					</div>
 					<div class="card">
 						<div class="card-header">
-							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="imagens/Captura de tela 2024-08-09 084736.png"></a>
+							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="img/parceiros.png"></a>
 						</div>
 						<div class="card-body">
 							<span Class="tag tag-red">Youtube</span>
@@ -195,7 +195,7 @@
 			</div>
 		</section>
         <!--Sessão de contato-->
-		<Section id="contact" class= "contact">
+		<section id="contact" class= "contact">
             <div class="box">
                 <div class="contact form">
                     <h3 style="text-align: center; margin-bottom: 30px;">Envie uma mensagem</h3>
@@ -214,7 +214,7 @@
                             <div class="row50">
                                 <div class="inputBox">
                                     <span>Email </span>
-                                    <input type="email" placeholder="Digite aqui" required>
+                                    <input type="email" name="email" placeholder="Digite aqui" required>
                                 </div>
                             </div>
     
