--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         <li><a href="#portfolio">Sobre nós</a></li>
                         <li><a href="#Blog">Conheça nosso blog</a></li>
                         <li><a href="#contact">Fale conosco</a></li>
-                        <li><a href="https://wa.me/5511999832007?text=Trabalhe%20conosco">Trabalhe conosco</a></li>
+                        <li><a href="documentos/gugutalkshow - documento.pdf">Leia a documentação</a></li>
                         
                     </ul>
                 </div>
@@ -292,6 +292,7 @@
                         <li><a href="https://www.instagram.com/gugu.talk.show/">Nos siga</a></li>
                         <li><a href="#contact">Feedback's</a></li>
                         <li><a href="https://link.mercadopago.com.br/deckcs">faça uma doação</a></li>
+                        <li><a href="https://wa.me/5511999832007?text=Trabalhe%20conosco">Trabalhe conosco</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
