--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"> <!-- Evitar cache -->
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <meta http-equiv="refresh" content="30">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
     <meta name="country" content="Brazil">
@@ -60,9 +59,9 @@
 
     <meta property="og:title" content="Gugu TalkShow">
     <meta property="og:url" content="https://gugutalkshoww.vercel.app/">
-    <meta property="og:description" content="Projeto desenvolvido para trabalhar habilidades em programação.">
+    <meta name="description" content="Gugu Talk Show, lançado por Gustavo Silva de Oliveira em 9 de agosto de 2023, é um espaço inovador de conversas e entretenimento. Com presença nas redes sociais como Instagram e TikTok, oferece conteúdo diversificado e de alta qualidade.">
     <meta property="og:site_name" content="Projeto DS">
-    <meta property="og:image" content="Imagem capa aqui">
+    <meta property="og:image" content="img/logoBranca.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="700">
     <meta property="og:image:height" content="366">
@@ -70,7 +69,6 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"> <!-- Evitar cache -->
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <meta http-equiv="refresh" content="30">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     
 
@@ -80,7 +78,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 
     <title>Gugu talkshow</title>
-    <link rel="icon" href="img/logoBranca.jpg">
+    <link rel="icon" href="Imagens/logoBranca.jpg">
+    <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/contato.css">
     <link rel="stylesheet" href="css/blog.css">
@@ -114,8 +113,8 @@
             <ul class="nav-list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#">Loja</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a onclick="openModal()" href="#">Loja</a></li>
+                <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
         </nav>
@@ -130,16 +129,24 @@
                 temos expandido nossa presença nas principais redes sociais, como Instagram e TikTok, trazendo conteúdo diversificado e de alta qualidade.
             </p>
             <div class="owl-carousel owl-theme">
-                <div class="item"><img src="img/principal.jpg" alt="Imagem Principal"></div>
-                <div class="item"><img src="img/Dupla.jpg" alt="Dupla"></div>
-                <div class="item"><img src="img/Trazeira.jpg" alt="Imagem Traseira"></div>
-                <div class="item"><img src="img/Frontal2.jpg" alt="Imagem Frontal 2"></div>
-                <div class="item"><img src="img/Fofos.jpg" alt="Imagem Fofa"></div>
-                <div class="item"><img src="img/Frontal.jpg" alt="Imagem Frontal"></div>
+                <div class="item"><img src="Imagens/principal.jpg" alt="Imagem Principal" loading="lazy"></div>
+                <div class="item"><img src="Imagens/Dupla.jpg" alt="Dupla" loading="lazy"></div>
+                <div class="item"><img src="Imagens/Trazeira.jpg" alt="Imagem Traseira" loading="lazy"></div>
+                <div class="item"><img src="Imagens/Frontal2.jpg" alt="Imagem Frontal 2" loading="lazy"></div>
+                <div class="item"><img src="Imagens/Fofos.jpg" alt="Imagem Fofa" loading="lazy"></div>
+                <div class="item"><img src="Imagens/Frontal.jpg" alt="Imagem Frontal" loading="lazy"></div>
             </div>
         </section>
 
-
+        <div id="modal" class="modal">
+            <div class="modal-content">
+              <div class="icon">
+                <i class="fas fa-clock"></i>
+              </div>
+              <p>Esta funcionalidade ainda não está disponível, em breve mais informações.</p>
+              <button onclick="closeModal()" class="close-btn">Fechar</button>
+            </div>
+          </div>
 
         <!--Sessão de blog-->
 		<section id="blog" class="blog py-3">
@@ -155,7 +162,7 @@
 				<div class="blog-card">
 					<div class="card">
 						<div class="card-header">
-							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="img/Fofos.jpg"></a>
+							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="Imagens/Fofos.jpg" alt="imagem de duas pessoas"></a>
 						</div>
 						<div class="card-body">
 							<span Class="tag tag-orange">tiktok</span>
@@ -168,7 +175,7 @@
 					</div>
 					<div class="card">
 						<div class="card-header">
-							<a href="https://www.instagram.com/gugu.talk.show/"><img src="img/vista.png"></a>
+							<a href="https://www.instagram.com/gugu.talk.show/"><img src="Imagens/vista.png" alt="vista de um parque"></a>
 						</div>
 						<div class="card-body">
 							<span Class="tag tag-purple">Instagram</span>
@@ -181,7 +188,7 @@
 					</div>
 					<div class="card">
 						<div class="card-header">
-							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="img/parceiros.png"></a>
+							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="Imagens/parceiros.png" alt="grupo gugutalkshow"></a>
 						</div>
 						<div class="card-body">
 							<span Class="tag tag-red">Youtube</span>
@@ -327,6 +334,7 @@
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script>
         const anoAtual = new Date().getFullYear();
         document.getElementById('ano').textContent =  anoAtual;
