--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
                 temos expandido nossa presença nas principais redes sociais, como Instagram e TikTok, trazendo conteúdo diversificado e de alta qualidade.
             </p>
             <div class="owl-carousel owl-theme">
-                <div class="item"><img src="Imagens/principal.jpg" alt="Imagem Principal" loading="lazy"></div>
+                <div class="item"><img src="Imagens/converted-image (2).webp" alt="Imagem Principal" loading="lazy"></div>
                 <div class="item"><img src="Imagens/Dupla.jpg" alt="Dupla" loading="lazy"></div>
                 <div class="item"><img src="Imagens/Trazeira.jpg" alt="Imagem Traseira" loading="lazy"></div>
-                <div class="item"><img src="Imagens/Frontal2.jpg" alt="Imagem Frontal 2" loading="lazy"></div>
+                <div class="item"><img src="Imagens/converted-image (3).webp" alt="Imagem Frontal 2" loading="lazy"></div>
                 <div class="item"><img src="Imagens/Fofos.jpg" alt="Imagem Fofa" loading="lazy"></div>
-                <div class="item"><img src="Imagens/Frontal.jpg" alt="Imagem Frontal" loading="lazy"></div>
+                <div class="item"><img src="Imagens/Frontal (1).webp" alt="Imagem Frontal" loading="lazy"></div>
             </div>
         </section>
 
