--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				<div class="blog-card">
 					<div class="card">
 						<div class="card-header">
-							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="Imagens/Fofos.jpg" alt="imagem de duas pessoas" loading="lazy"></a>
+							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="Imagens/Fofos.jpg" alt="imagem de duas pessoas" ></a>
 						</div>
 						<div class="card-body">
 							<span Class="tag tag-orange">tiktok</span>
@@ -156,7 +156,7 @@
 					</div>
 					<div class="card">
 						<div class="card-header">
-							<a href="https://www.instagram.com/gugu.talk.show/"><img src="Imagens/vista.png" alt="vista de um parque" loading="lazy"></a>
+							<a href="https://www.instagram.com/gugu.talk.show/"><img src="Imagens/vista.png" alt="vista de um parque" ></a>
 						</div>
 						<div class="card-body">
 							<span Class="tag tag-purple">Instagram</span>
@@ -169,7 +169,7 @@
 					</div>
 					<div class="card">
 						<div class="card-header">
-							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="Imagens/parceiros.png" alt="grupo gugutalkshow" loading="lazy"></a>
+							<a href="https://www.tiktok.com/@gugu.talk.show"><img src="Imagens/parceiros.png" alt="grupo gugutalkshow" ></a>
 						</div>
 						<div class="card-body">
 							<span Class="tag tag-red">Youtube</span>
