--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="google-site-verification" content="Sngd0CJaS-1oIXu-2khI_ObmvaArwtgqaceLyc1cPWI" />
 
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"> <!-- Evitar cache -->
-    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Pragma" content="public">
     <meta http-equiv="Expires" content="0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
