--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </div>
                 
                 <div class="about-image" data-aos="fade-left" data-aos-delay="400">
-                    <img src="Imagens/converted-image (2).webp" alt="Equipe Gugu Talk Show" loading="lazy">
+                    <img src="Imagens/Photo from Dérick Campos Santos(10).jpg" alt="Equipe Gugu Talk Show" loading="lazy">
                 </div>
             </div>
         </div>
@@ -173,19 +173,40 @@
             
             <div class="gallery-carousel owl-carousel owl-theme" data-aos="fade-up" data-aos-delay="200">
                 <div class="gallery-item">
+                    <img src="Imagens/Photo from Dérick Campos Santos(13).jpg" alt="Momento descontraído" loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="Imagens/Photo from Dérick Campos Santos(7).jpg" alt="Momento descontraído" loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="Imagens/Photo from Dérick Campos Santos.jpg" alt="Interação com o público" loading="lazy">
+                </div>
+                <div class="gallery-item">
                     <img src="Imagens/Dupla.jpg" alt="Evento Gugu Talk Show" loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="Imagens/Photo from Dérick Campos Santos(12).jpg" alt="Equipe em ação" loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="Imagens/Photo from Dérick Campos Santos(15).jpg" alt="Equipe em ação" loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="Imagens/Photo from Dérick Campos Santos(16).jpg" alt="Momento descontraído" loading="lazy">
                 </div>
                 <div class="gallery-item">
                     <img src="Imagens/Trazeira.jpg" alt="Produção de conteúdo" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Imagens/converted-image (3).webp" alt="Equipe em ação" loading="lazy">
+                    <img src="Imagens/Photo from Dérick Campos Santos(17).jpg" alt="Equipe em ação" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Imagens/Fofos.jpg" alt="Momento descontraído" loading="lazy">
+                    <img src="Imagens/Photo from Dérick Campos Santos(19).jpg" alt="Momento descontraído" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="Imagens/Frontal (1).webp" alt="Interação com o público" loading="lazy">
+                    <img src="Imagens/Photo from Dérick Campos Santos(8).jpg" alt="Interação com o público" loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="Imagens/Photo from Dérick Campos Santos(18).jpg" alt="Momento descontraído" loading="lazy">
                 </div>
             </div>
         </div>
